# llvm-project-mlir

./: CMakeLists.txt
cmake/: mlir.cmake
mlir/: CMakeLists.txt
mlir-standalone-example/: CMakeLists.txt
mlir/include/mlir/Conversion/: MIOpenPasses.h  MIOpenPasses.td
mlir/include/mlir/Dialect/: CMakeLists.txt
mlir/include/mlir/Dialect/LLVMIR/: CMakeLists.txt
mlir/lib/: CMakeLists.txt
mlir/lib/Conversion/: CMakeLists.txt  PassDetail.h
mlir/lib/Dialect/: CMakeLists.txt
mlir/lib/Dialect/LLVMIR/: CMakeLists.txt
mlir/test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
mlir/tools/: CMakeLists.txt
mlir/tools/mlir-miopen-driver/: CMakeLists.txt  mlir-miopen-driver.cpp
mlir/tools/mlir-miopen-lib/: CMakeLists.txt  mlir-miopen-lib.cpp
mlir/utils/jenkins/: Dockerfile.rocm  Jenkinsfile
