cmake_minimum_required(VERSION 3.13.4)  # fixme: double-check versions

project(mlir-miopen)

#add_subdirectory(cmake/modules)
add_subdirectory(docs)
add_subdirectory(examples)
add_subdirectory(include/mlir)
add_subdirectory(lib)
add_subdirectory(test)
add_subdirectory(tools)
#add_subdirectory(utils)
